--- a/src/personal-finances-react/src/App.css
+++ b/src/personal-finances-react/src/App.css
@@ -20,22 +20,12 @@
   position: relative;
 }
 
-.title .exit{
-  font-size: 1.5rem;
-  position: absolute;
-  top: 0.8rem;
-  right: 1rem;
-  padding: 0;
-  background-color: initial;
-  border-radius: 50%;
-  border: none;
-  margin: 0;
-  color: #000000;
+button:hover{
+  cursor: pointer;
+  opacity: 0.9;
 }
 
-.title .exit i{
-  background-color: none;
-}
+
 
 /* MOVEMENT */
 .movement {
@@ -43,10 +33,9 @@
   width: 100%;
   margin: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   position: relative;
-  border-radius: 0.8em 0.8em 0 0;
   background-color: #ffecec;
 
 }
@@ -57,10 +46,18 @@
   align-items: center;
 }
 
+.movement div #date{
+  width: 12%;
+  margin-left: 0.3rem;
+  text-align: center;
+}
+
 .movement div img {
   width: 3rem;
   border-radius: 0.2rem;
   margin: 0.7rem;
+  padding: 0.4rem;
+  background-color: #ffffff;
 }
 
 .movement div .detail{
@@ -88,9 +85,52 @@
   font-weight: bold;
   margin-right: 2rem;
   text-align: right;
+  width: 20%;
 }
 
 
+
+/* HEADER */
+
+.header{
+  width: 100%;
+  display: flex;
+  background-color: #9869d174;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0.8rem 0;
+}
+
+.header .logo {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.header h1 {
+  font-size: 1.3rem;
+}
+
+.header .log-in{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: initial;
+  padding: 0;
+  border: none;
+  color: #000000;
+}
+
+.header .log-in img{
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin: 0.3rem;
+}
+
+.header .log-in p{
+  font-size: 0.9rem;
+}
 
 /* BALANCE */
 
@@ -154,6 +194,25 @@
   width: 80%;
   margin: 2em auto;
   background-color: #ffecec;
+  position: relative;
+}
+
+.new-movement .exit{
+  font-size: 1.5rem;
+  position: absolute;
+  top: 0.8rem;
+  right: 1rem;
+  padding: 0;
+  background-color: initial;
+  border-radius: 50%;
+  border: none;
+  margin: 0;
+  color: #000000;
+}
+
+
+.new-movement .exit i{
+  background-color: none;
 }
 
 
