--- a/src/personal-finances-react/src/App.css
+++ b/src/personal-finances-react/src/App.css
@@ -85,7 +85,15 @@ button:hover{
   font-weight: bold;
   margin-right: 2rem;
   text-align: right;
-  width: 20%;
+  width: 23%;
+}
+
+.movement #amount.red{
+  color: #c72a2ade;
+}
+
+.movement #amount.green{
+  color: #0d9d0de0;
 }
 
 
@@ -156,6 +164,24 @@ button:hover{
 
 .balance p {
   font-size: 1rem;
+}
+
+.balance.green{
+  border: 1px solid #0d9d0de0;
+}
+
+.balance.red{
+  border: 1px solid #c72a2ade;
+}
+
+.balance span.green {
+  font-weight: bold;
+  color: #0d9d0de0;
+}
+
+.balance span.red {
+  font-weight: bold;
+  color: #c72a2ade;
 }
 
 
