--- a/src/personal-finances-react/src/App.css
+++ b/src/personal-finances-react/src/App.css
@@ -47,7 +47,7 @@ button:hover{
 }
 
 .movement div #date{
-  width: 12%;
+  width: 15%;
   margin-left: 0.3rem;
   text-align: center;
 }
@@ -72,7 +72,7 @@ button:hover{
 
 .movement i{
   position: absolute;
-  right: 0.8rem;
+  right: 0.6rem;
 }
 
 .movement i:hover{
@@ -318,3 +318,53 @@ button:hover{
   margin: 1rem auto;
 }
 
+
+.session{
+  background-color: #f2f2f2;
+}
+
+.login{
+  padding: 2rem 0px;
+  width: 80%;
+  margin: auto;
+}
+
+.login .info{
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffecec;
+
+}
+
+.login .info input{
+  width: 100%;
+  margin: 0.5em auto;
+  height: 2rem;
+  padding: 0.3rem;
+  text-align: start;
+  border-radius: 0.4rem;
+  background-color: #ffffff;
+  border: #767676 solid 1px;
+  color: #000000;
+}
+
+.login .info #forgot{
+  margin: 0.3rem auto;
+  text-align: right;
+  width: 100%;
+  text-decoration: underline;
+  color: blue;
+  font-size: 0.8rem;
+}
+
+.login .info #register{
+  text-align: center;
+  width: 100%;
+  margin: 0.3rem auto;
+}
+
+.login .link{
+  text-decoration: underline;
+  color: blue;
+}
