--- a/src/personal-finances-react/src/App.css
+++ b/src/personal-finances-react/src/App.css
@@ -377,6 +377,20 @@ button:hover{
 }
 
 
+.login .errors{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.4rem;
+}
+
+.login .errors .error{
+  width: 90%;
+  color: red;
+  margin-left: 0.2rem;
+}
+
+
 /* REGISTER */
 
 .register{
@@ -428,4 +442,17 @@ button:hover{
 .register .link:hover{
   cursor: pointer;
   opacity: 0.8;
+}
+
+.register .info .errors{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.4rem;
+}
+
+.register .info .errors .error{
+  width: 90%;
+  color: red;
+  margin-left: 0.2rem;
 }
